sass/base.scss
body {
    font-family: var(--body-font);
    color: var(--body-color);
    // font-size: 1.4rem;
    line-height: 1.5;

    * {

        --border-color: #ccc;
    }
}

.site-header a,
.article a {
    text-decoration: none;
    color: inherit;
}

.article-format {
    font-family: "Onest";
    font-size: 0.85rem;
    font-weight: 600;
    color: var(--format-color);
    text-transform: uppercase;
    margin-bottom: 0;
}


/* Footer Styles */
.site-footer {
    background-color: #dae7f8;
    color: #13294B;
}

.footer-container {
    max-width: 1200px;
    margin: 0 auto;
    padding: 3rem 1rem;
}

.footer-content {
    //max-width: 45rem;
    font-size: 1.125rem;
    // font-family: "Source Serif 4";
}

.footer-content p+p {
    margin-top: 1rem;
}

.footer-link {
    text-decoration: underline;
}

/* Main Content Area */
.site-content {
    //max-width: 1200px;
    max-width: 90%;
    margin: 0 auto;
    //padding: 1rem 1rem;
}

@media (max-width: 768px) {
    .site-content {
        padding: 1.3rem 1rem;
    }
}

/* Call to Action Section */
.call-to-action {
    background-color: #dae7f8;
    color: #13294B;
    padding: 2rem;
    width: 100%;
    text-align: center;

    border-radius: 4px;

    h2 {
        font-family: 'Libre Franklin', sans-serif;
        font-size: 2rem;
        margin-bottom: 1rem;
    }

    p {
        font-family: 'Source Serif 4', serif;
        max-width: 600px;
        margin: 0 auto;
        font-size: 1.2rem;
        margin-bottom: 2rem;
    }

    .btn {
        display: inline-block;
        background-color: #13294B;
        color: #fff;
        padding: 0.8rem 1.5rem;
        text-decoration: none;
        border-radius: 4px;
        transition: background-color 0.3s;

        &:hover {
            background-color: lighten(#13294B, 10%);
        }
    }
}

.nav-link {
    color: black !important;
}

.nav-link:hover {
    color: #56A0D3 !important;
}

.mobile-nav {
    display: none;
}

.logo-bar {
    display: flex;
}

.box {
    flex: 1;
    display: flex;
    justify-content: center;
}
.box71 > span { margin-right: auto; }
.box73 > span { margin-left: auto;  }

@media (max-width: 1150px) {
    .logo-bar {
        display: none;
    }
    .desktop-nav {
        display: none;
    }
    .mobile-nav {
        display: contents;
    }
}

